<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2018 Google LLC.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
    <string name="app_name">Sceneform Drawing</string>
    <string name="clear_drawing">Clear drawing</string>
    <string name="select_color">Select color</string>
    <string name="undo_last_drawing_element">Undo last drawing element</string>
    <string name="white_color">White color</string>
    <string name="red_color">Red color</string>
    <string name="green_color">Green color</string>
    <string name="blue_color">Blue color</string>
    <string name="black_color">Black color</string>
    <string name="rainbow_color">Rainbow color</string>
</resources>

